--- a/srcs/wordpress/nginx.conf
+++ b/srcs/wordpress/nginx.conf
@@ -1,8 +1,8 @@
 user                            www;
-worker_processes                1;
+worker_processes                auto; # it will be determinate automatically by the number of core
 
 error_log                       /var/log/nginx/error.log warn;
-pid                             /var/run/nginx.pid;
+#pid                             /var/run/nginx/nginx.pid; # it permit you to use /etc/init.d/nginx reload|restart|stop|start
 
 events {
     worker_connections          1024;
@@ -17,12 +17,17 @@ http {
     server {
         listen                  80;
         root                    /www;
-        index                   index.html index.htm index.php;
+        index                   index.html index.htm;
         server_name             localhost;
         client_max_body_size    32m;
         error_page              500 502 503 504  /50x.html;
         location = /50x.html {
               root              /var/lib/nginx/html;
+        }
+        location ~ \.php$ {
+              fastcgi_pass      127.0.0.1:9000;
+              fastcgi_index     index.php;
+              include           fastcgi.conf;
         }
     }
 }
