--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -14,15 +14,30 @@ http {
     sendfile                    on;
     access_log                  /var/log/nginx/access.log;
     keepalive_timeout           3000;
-    server {
-        listen                  80;
-        root                    /www;
-        index                   index.html index.htm index.php;
-        server_name             localhost;
-        client_max_body_size    32m;
-        error_page              500 502 503 504  /50x.html;
-        location = /50x.html {
-              root              /var/lib/nginx/html;
+    server{
+        listen 443 ssl;
+        ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+        root /www;
+        index index.php index.html;
+        server_name _;
+        location / {
+            try_files $uri $uri/ = 404;
+
         }
+        location /wordpress {
+            return 307 http://wordpress:5000;
+        }
+    }
+    server {
+    #listen 80 default_server;
+    #listen [::]:80 default_server;
+    listen 80;
+    root /www;
+    index index.php index.html;
+
+    server_name _;
+
+    return 301 https://$host$request_uri;
     }
 }
