--- a/srcs/MySQL/Dockerfile
+++ b/srcs/MySQL/Dockerfile
@@ -3,8 +3,8 @@ FROM alpine
 RUN apk upgrade --available && apk add openrc &&\
     apk add mysql mysql-client
 
-RUN openrc default &&\
-    /etc/init.d/mariadb setup &&\
+RUN openrc default
+RUN /etc/init.d/mariadb setup &&\
     /etc/init.d/mariadb start
 
 
