--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -26,7 +26,7 @@ http {
 
         }
         location /wordpress {
-            return 307 http://wordpress:5000;
+            return 307 http://192.168.99.241:5000/;
         }
     }
     server {
