--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -1,9 +1,6 @@
-# docker-machine env default
-# eval $(docker-machine env default)
-
 FROM	alpine
 
-RUN apk upgrade --available
+RUN apk upgrade --available && apk add openrc
 RUN apk add nginx && mkdir /run/nginx/ &&\
 	adduser -D -g 'www' www &&\
 	mkdir /www && chown -R www:www /var/lib/nginx && chown -R www:www /www &&\
@@ -13,12 +10,10 @@ ADD ./index.html /www/index.html
 RUN apk add openssl &&\
 	openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key -out /etc/ssl/certs/nginx-selfsigned.crt -subj "/CN=localhost"
 RUN nginx -t
-RUN apk add openssh
+RUN apk add openssh && rc-status && mkdir /run/openrc/softlevel && /etc/init.d/sshd start
 RUN adduser -D user
 RUN echo "user:password"|chpasswd
 RUN ssh-keygen -A
-
-
 
 ADD ./script.sh /usr/bin/
 
