--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -7,19 +7,20 @@ RUN apk add nginx && mkdir /run/nginx/ &&\
 	mv /etc/nginx/nginx.conf /etc/nginx/nginx.conf.orig
 ADD ./nginx.conf /etc/nginx/nginx.conf
 ADD ./index.html /www/index.html
+RUN apk add openssl &&\
+	openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key -out /etc/ssl/certs/nginx-selfsigned.crt -subj "/CN=localhost"
 RUN nginx -t
-RUN apk add php7-fpm php7-mcrypt php7-soap php7-openssl php7-gmp php7-pdo_odbc php7-json php7-dom php7-pdo php7-zip php7-mysqli php7-sqlite3 php7-apcu php7-pdo_pgsql php7-bcmath php7-gd php7-odbc php7-pdo_mysql php7-pdo_sqlite php7-gettext php7-xmlreader php7-xmlrpc php7-bz2 php7-iconv php7-pdo_dblib php7-curl php7-ctype
-ADD ./php7.sh /etc/profile.d/php7.sh
+# RUN apk add php7-fpm php7-mcrypt php7-soap php7-openssl php7-gmp php7-pdo_odbc php7-json php7-dom php7-pdo php7-zip php7-mysqli php7-sqlite3 php7-apcu php7-pdo_pgsql php7-bcmath php7-gd php7-odbc php7-pdo_mysql php7-pdo_sqlite php7-gettext php7-xmlreader php7-xmlrpc php7-bz2 php7-iconv php7-pdo_dblib php7-curl php7-ctype
+# ADD ./php7.sh /etc/profile.d/php7.sh
 
 
-
-#ADD ./script.sh /usr/bin/
+ADD ./script.sh /usr/bin/
 
 #VOLUME [ “/sys/fs/cgroup” ]
 
 EXPOSE	443 80
 
-#ENTRYPOINT /usr/bin/script.sh
+ENTRYPOINT /usr/bin/script.sh
 
 
 # install rc-service:
