--- a/srcs/wordpress/nginx.conf
+++ b/srcs/wordpress/nginx.conf
@@ -1,8 +1,8 @@
 user                            www;
-worker_processes                auto; # it will be determinate automatically by the number of core
+worker_processes                1;
 
 error_log                       /var/log/nginx/error.log warn;
-#pid                             /var/run/nginx/nginx.pid; # it permit you to use /etc/init.d/nginx reload|restart|stop|start
+pid                             /var/run/nginx.pid;
 
 events {
     worker_connections          1024;
@@ -14,20 +14,34 @@ http {
     sendfile                    on;
     access_log                  /var/log/nginx/access.log;
     keepalive_timeout           3000;
-    server {
-        listen                  80;
-        root                    /www;
-        index                   index.html index.htm;
-        server_name             localhost;
-        client_max_body_size    32m;
-        error_page              500 502 503 504  /50x.html;
-        location = /50x.html {
-              root              /var/lib/nginx/html;
+    server{
+        listen 443 ssl;
+        ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+        root /www;
+        index index.php index.html index.htm;
+        server_name _;
+        location / {
+            try_files $uri $uri/ = 404;
         }
         location ~ \.php$ {
               fastcgi_pass      127.0.0.1:9000;
               fastcgi_index     index.php;
               include           fastcgi.conf;
         }
+        location /wordpress {
+            return 307 https://$host$request_uri:5000/;
+        }
+    }
+    server {
+        #listen 80 default_server;
+        #listen [::]:80 default_server;
+        listen 80;
+        root /www;
+        index index.php index.html;
+
+        server_name _;
+
+        return 301 https://$host$request_uri;
     }
 }
