--- a/srcs/MySQL/Dockerfile
+++ b/srcs/MySQL/Dockerfile
@@ -20,4 +20,5 @@ RUN rc-status && touch /run/openrc/softlevel
 RUN mysql_install_db --user=mysql --datadir=/var/lib/mysql
 RUN rc-service mariadb start
 
-
+ADD ./script.sh /usr/bin/
+ENTRYPOINT /usr/bin/script.sh
