--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -10,9 +10,9 @@ ADD ./src/index.html /www/index.html
 RUN apk add openssl &&\
 	openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key -out /etc/ssl/certs/nginx-selfsigned.crt -subj "/CN=localhost"
 RUN nginx -t
-RUN apk add openssh && rc-status && mkdir /run/openrc/softlevel && /etc/init.d/sshd start
-RUN adduser -D user
-RUN echo "user:password"|chpasswd
+RUN apk add openssh && rc-status && mkdir /run/openrc/softlevel && /etc/init.d/sshd start &>/dev/null
+RUN adduser -D admin
+RUN echo "admin:admin"|chpasswd
 RUN ssh-keygen -A
 
 ADD ./src/script.sh /usr/bin/
