--- a/srcs/nginx/src/nginx.conf
+++ b/srcs/nginx/src/nginx.conf
@@ -18,7 +18,7 @@ http {
         listen 443 ssl;
         ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
         ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
-        root /www;
+        root /www/;
         index index.php index.html;
         server_name _;
         location / {
@@ -26,18 +26,17 @@ http {
 
         }
         location /wordpress {
-            return 307 http://192.168.99.241:5000/;
+            return 307 http://$host:5000;
+        }
+        location /phpmyadmin {
+            proxy_set_header X-Forwarded-Proto https;
+            # proxy_buffering off;
+            proxy_pass http://$host:5050;
         }
     }
     server {
-    #listen 80 default_server;
-    #listen [::]:80 default_server;
-    listen 80;
-    root /www;
-    index index.php index.html;
-
-    server_name _;
-
-    return 301 https://$host$request_uri;
+        listen 80;
+        server_name _;
+        return 301 https://$host$request_uri;
     }
 }
