--- a/srcs/phpMyAdmin/src/nginx.conf
+++ b/srcs/phpMyAdmin/src/nginx.conf
@@ -14,10 +14,10 @@ http {
     access_log                  /var/log/nginx/access.log;
     keepalive_timeout           3000;
     server {
-        listen 80;
+        listen 5050;
 
         index index.html index.php index.htm;
-        server_name localhost;
+        server_name _;
 
         root /www/;
 
@@ -30,8 +30,6 @@ http {
             fastcgi_index   index.php;
             include         fastcgi.conf;
             include         fastcgi_params;
-            fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
-            fastcgi_param   SCRIPT_NAME        $fastcgi_script_name;
         }
     }
 }
