--- a/srcs/wordpress/src/nginx.conf
+++ b/srcs/wordpress/src/nginx.conf
@@ -14,28 +14,21 @@ http {
     access_log                  /var/log/nginx/access.log;
     keepalive_timeout           3000;
     server {
-        listen 80;
+        listen 5000;
 
         index index.html index.php index.htm;
-        server_name localhost;
+        server_name _;
 
-        root /www/;
+        root /www/wordpress/;
 
         location / {
             try_files $uri $uri/ =404;
         }
 
-        # location /wordpress {
-        #     return 307 http://$host$request_uri;
-        # }
-
         location ~ \.php$ {
             fastcgi_pass    127.0.0.1:9000;
             fastcgi_index   index.php;
             include         fastcgi.conf;
-            include         fastcgi_params;
-            fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
-            fastcgi_param   SCRIPT_NAME        $fastcgi_script_name;
         }
     }
 }
