--- a/srcs/nginx/nginx.yaml
+++ b/srcs/nginx/nginx.yaml
@@ -5,7 +5,6 @@ metadata:
   labels:
     app: nginx
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app: nginx
@@ -27,6 +26,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx
+  annotations:
+    metallb.universe.tf/allow-shared-ip: shared
 spec:
   selector:
     app: nginx
