--- a/srcs/MySQL/Dockerfile
+++ b/srcs/MySQL/Dockerfile
@@ -1,26 +1,16 @@
-# FROM alpine
-
-# RUN apk upgrade --available && apk add openrc &&\
-#     apk add mysql mysql-client
-
-# RUN openrc default
-# RUN /etc/init.d/mariadb setup &&\
-#     /etc/init.d/mariadb start
-
-
-# EXPOSE 3306
-
-
-# openrc default
 FROM alpine
 
 RUN apk upgrade --available && apk add openrc
 RUN apk add mysql mysql-client
 RUN rc-status && touch /run/openrc/softlevel
 RUN mysql_install_db --user=mysql --datadir=/var/lib/mysql
-RUN rc-service mariadb start
+RUN rc-service mariadb start && rc-update add mariadb default
+
+ADD ./src/wp_data_base.sh /usr/bin/
+RUN rc-service mariadb restart && ./usr/bin/wp_data_base.sh
 
 ADD src/script.sh /usr/bin/
+
 
 ENTRYPOINT /usr/bin/script.sh
 
