--- a/srcs/MySQL/Dockerfile
+++ b/srcs/MySQL/Dockerfile
@@ -9,6 +9,8 @@ RUN rc-service mariadb start && rc-update add mariadb default
 ADD ./src/wp_data_base.sh /usr/bin/
 RUN rc-service mariadb restart && ./usr/bin/wp_data_base.sh
 
+ADD ./src/my.cnf /etc/mysql/
+
 ADD src/script.sh /usr/bin/
 
 
