--- a/srcs/nginx/src/nginx.conf
+++ b/srcs/nginx/src/nginx.conf
@@ -18,7 +18,7 @@ http {
         listen 443 ssl;
         ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
         ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
-        root /www/;
+        root /www/index/;
         index index.php index.html;
         server_name _;
         location / {
@@ -28,7 +28,7 @@ http {
         location /wordpress {
             return 307 http://$host:5050;
         }
-        location /phpmyadmin {
+        location /phpmyadmin/ {
             proxy_set_header X-Forwarded-Proto https;
             # proxy_buffering off;
             proxy_pass http://$host:5000;
