--- a/mysql.yaml
+++ b/mysql.yaml
@@ -1,69 +1,53 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: mysql
-  labels:
-    app: wordpress
-spec:
-  selector:
-    matchLabels:
-      app: wordpress
-      tier: mysql
-  strategy:
-    type: Recreate
-  template:
-    metadata:
-      labels:
-        app: wordpress
-        tier: mysql
-    spec:
-      containers:
-        - name: mysql
-          image: mysql
-      env:
-        - name: MYSQL_ROOT_PASSWORD
-          valueForm:
-          secretKeyRef:
-            name: mysql-pass
-            key: password
-      ports:
-        - containerPort: 3306
-      imagePullPolicy: Never
-      volumeMounts:
-          - name: mysql-persistent-storage
-            mountPath: /var/lib/mysql
-      volumes:
-        - name: mysql-persistent-storage
-          persistentVolumeClaim:
-            claimName: PersistentVolumeClaim
----
 apiVersion: v1
 kind: Service
 metadata:
   name: mysql
-  lables:
-    app: wordpress
-  annotations:
-    metallb.universe.tf/allow-shared-ip: shared
+  labels:
+    app: mysql
 spec:
-  selector:
-    app: wordpress
   ports:
-    - protocol: TCP
-      port: 3306
-      name: mysql
-      targetPort: 3306
-  type: LoadBalancer
+    - port: 3306
+  selector:
+    app: mysql
+  type: ClusterIP
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: PersistentVolumeClaim
   labels:
-    app: wordpress
-  spec:
-    accessModes:
-      - ReadWriteOnce
-    resources:
-      requests:
-        storage: 20Gi
+    app: mariadb
+  name: mysql-storage
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 128M
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mysql
+spec:
+  selector:
+    matchLabels:
+      app: mysql
+  template:
+    metadata:
+      labels:
+        app: mysql
+    spec:
+      containers:
+        - name: mysql
+          image: mysql
+          imagePullPolicy: Never
+          volumeMounts:
+          - mountPath: /var/lib/mysql
+            name: var-lib-mysql
+          ports:
+            - containerPort: 3306
+              name: mysql
+      volumes:
+      - name: var-lib-mysql
+        persistentVolumeClaim:
+          claimName: mysql-storage
