--- a/srcs/phpMyAdmin/src/nginx.conf
+++ b/srcs/phpMyAdmin/src/nginx.conf
@@ -19,7 +19,7 @@ http {
         index index.html index.php index.htm;
         server_name _;
 
-        root /www/phpmyadmin/;
+        root /www/phpmyadmin;
 
         location / {
             try_files $uri $uri/ =404;
