--- a/srcs/nginx/src/nginx.conf
+++ b/srcs/nginx/src/nginx.conf
@@ -1,5 +1,5 @@
 user                            www;
-worker_processes                1;
+worker_processes                auto;
 
 error_log                       /var/log/nginx/error.log warn;
 pid                             /var/run/nginx.pid;
@@ -21,17 +21,18 @@ http {
         root /www/index/;
         index index.php index.html;
         server_name _;
-        location / {
-            try_files $uri $uri/ = 404;
+        client_max_body_size    32m;
+        error_page              500 502 503 504 /50x.html;
 
-        }
+
         location /wordpress {
             return 307 http://$host:5050;
         }
         location /phpmyadmin/ {
-            proxy_set_header X-Forwarded-Proto https;
-            # proxy_buffering off;
-            proxy_pass http://$host:5000;
+                index            index.php;
+                proxy_set_header X-Forwarded-Proto https;            
+                proxy_pass       http://phpmyadmin:5000/;
+                proxy_redirect   /index.php  /phpmyadmin/index.php;
         }
     }
     server {
