--- a/srcs/influxdb/Dockerfile
+++ b/srcs/influxdb/Dockerfile
@@ -1,16 +1,15 @@
 FROM alpine
 
-RUN apk add influxdb openrc 
-RUN openrc &> /dev/null && touch /run/openrc/softlevel
-RUN wget https://dl.influxdata.com/telegraf/releases/telegraf-1.14.0-static_linux_amd64.tar.gz
-RUN tar zxvf telegraf-1.14.0-static_linux_amd64.tar.gz \
-    && rm -rf telegraf-1.14.0-static_linux_amd64.tar.gz
-
-RUN chmod +x telegraf/*
-RUN cp telegraf/telegraf /usr/bin/telegraf
+RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories
+RUN apk add influxdb openrc telegraf supervisor
 RUN mkdir -p /etc/telegraf
-COPY src/telegraf.conf /etc/telegraf/telegraf.conf
+RUN mkdir -p /etc/influxdb
+RUN openrc &> /dev/null && touch /run/openrc/softlevel
+
+COPY src/telegraf.conf /etc/telegraf/
+COPY src/supervisord.conf /etc/
+COPY src/influxdb.conf /etc/influxdb/
 
 EXPOSE 8086
 
-#ENTRYPOINT /usr/bin/run.sh
+CMD ["/usr/bin/supervisord"]
