--- a/srcs/ftps/src/supervisord.conf
+++ b/srcs/ftps/src/supervisord.conf
@@ -3,5 +3,10 @@ nodaemon=true
 user=root
 
 [program:vsftpd]
-command= /usr/sbin/vsftpd /etc/vsftpd/vsftpd.conf
+command=/usr/sbin/vsftpd /etc/vsftpd/vsftpd.conf
 autorestart=true
+
+[program:telegraf]
+command=/usr/bin/telegraf --config /etc/telegraf/telegraf.conf --config-directory /etc/telegraf.conf.d
+autorestart=true
+
