--- a/srcs/nginx/src/supervisord.conf
+++ b/srcs/nginx/src/supervisord.conf
@@ -11,3 +11,7 @@ autostart=true
 command=nginx -g 'daemon off;'
 autorestart=true
 autostart=true
+
+[program:telegraf]
+command=/usr/bin/telegraf --config /etc/telegraf/telegraf.conf --config-directory /etc/telegraf.conf.d
+autorestart=true
