--- a/srcs/phpMyAdmin/src/supervisord.conf
+++ b/srcs/phpMyAdmin/src/supervisord.conf
@@ -9,3 +9,7 @@ autorestart=true
 [program:php-fpm7]
 command=/usr/sbin/php-fpm7 -F
 autorestart=true
+
+[program:telegraf]
+command=/usr/bin/telegraf --config /etc/telegraf/telegraf.conf --config-directory /etc/telegraf.conf.d
+autorestart=true
