--- a/srcs/wordpress/src/supervisord.conf
+++ b/srcs/wordpress/src/supervisord.conf
@@ -7,5 +7,9 @@ command=nginx -g 'daemon off;'
 autorestart=true
 
 [program:php-fpm7]
-command=/usr/sbin/php-fpm7
+command=/usr/sbin/php-fpm7 -F
+autorestart=true
+
+[program:telegraf]
+command=/usr/bin/telegraf --config /etc/telegraf/telegraf.conf --config-directory /etc/telegraf.conf.d
 autorestart=true
