--- a/ftps.yaml
+++ b/ftps.yaml
@@ -18,6 +18,7 @@ spec:
         image: ftps
         ports:
         - containerPort: 21
+        - containerPort: 21000
         imagePullPolicy: Never
 ---
 apiVersion: v1
@@ -30,8 +31,8 @@ spec:
   selector:
     app: ftps
   ports:
-    - protocol: TCP
-      name: ftp
-      port: 21
-      targetPort: 21
+    - port: 21
+      name: ftps
+    - port: 21000
+      name: data-channel
   type: LoadBalancer
