--- a/srcs/ftps/src/telegraf.conf
+++ b/srcs/ftps/src/telegraf.conf
@@ -91,7 +91,7 @@
   # logfile_rotation_max_archives = 5
 
   ## Override default hostname, if empty use os.Hostname()
-  hostname = "influxdb"
+  hostname = "ftps"
   ## If set to true, do no set the "host" tag in the telegraf agent.
   omit_hostname = false
 
@@ -107,7 +107,9 @@
   ##
   ## Multiple URLs can be specified for a single cluster, only ONE of the
   ## urls will be written to each interval.
-  urls = ["http://localhost:8086"]
+  urls = ["http://influxDB:8086"]
+  # urls = ["udp://127.0.0.1:8089"]
+  # urls = ["http://127.0.0.1:8086"]
 
   ## The target database for metrics; will be created as needed.
   ## For UDP url endpoint database needs to be configured on server side.
@@ -3978,7 +3980,7 @@
 #   # timeout = "5ms"
 
 
-# # A plugin to collect stats from Opensmtpd - a validating, recursive, and caching DNS resolver 
+# # A plugin to collect stats from Opensmtpd - a validating, recursive, and caching DNS resolver
 # [[inputs.opensmtpd]]
 #   ## If running as a restricted user you can prepend sudo for additional access:
 #   #use_sudo = false
