--- a/srcs/ftps/src/vsftpd.conf
+++ b/srcs/ftps/src/vsftpd.conf
@@ -9,7 +9,7 @@
 # capabilities.
 #
 # Allow anonymous FTP? (Beware - allowed by default if you comment this out).
-anonymous_enable=YES
+anonymous_enable=NO
 #
 # Uncomment this to allow local users to log in.
 local_enable=YES
@@ -52,7 +52,7 @@ connect_from_port_20=YES
 #
 # If you want, you can have your log file in standard ftpd xferlog format.
 # Note that the default log file location is /var/log/xferlog in this case.
-#xferlog_std_format=YES
+xferlog_std_format=YES
 #
 # You may change the default value for timing out an idle session.
 #idle_session_timeout=600
@@ -81,7 +81,7 @@ connect_from_port_20=YES
 #ascii_download_enable=YES
 #
 # You may fully customise the login banner string:
-#ftpd_banner=Welcome to blah FTP service.
+ftpd_banner=Welcome to blah FTP service.
 #
 # You may specify a file of disallowed anonymous e-mail addresses. Apparently
 # useful for combatting certain DoS attacks.
@@ -114,21 +114,14 @@ listen=YES
 # This directive enables listening on IPv6 sockets. To listen on IPv4 and IPv6
 # sockets, you must run two copies of vsftpd with two configuration files.
 # Make sure, that one of the listen options is commented !!
-#listen_ipv6=YES
 allow_writeable_chroot=YES
-passwd_chroot_enable=yes
+pam_service_name=vsftpd
 seccomp_sandbox=NO
-pasv_enable=Yes
 ssl_enable=YES
-force_dot_files=YES
-rsa_cert_file=/etc/ssl/private/vsftpd.pem
-rsa_private_key_file=/etc/ssl/private/vsftpd.pem
 allow_anon_ssl=NO
-force_local_data_ssl=YES
-force_local_logins_ssl=YES
-ssl_tlsv1=YES
-ssl_sslv2=NO
-ssl_sslv3=NO
-require_ssl_reuse=NO
-pasv_max_port=10100
-pasv_min_port=10090
+pasv_enable=YES
+rsa_cert_file=/usr/share/ssl/certs/vsftpd.pem
+rsa_private_key_file=/usr/share/ssl/certs/vsftpd.key
+pasv_address=192.168.99.235
+pasv_min_port=21000
+pasv_max_port=21000
