--- a/srcs/influxdb/src/influxdb.conf
+++ b/srcs/influxdb/src/influxdb.conf
@@ -7,21 +7,21 @@ reporting-disabled = false
   logging-enabled = true
 
 [data]
-  # dir = "/var/lib/influxdb/data"
-  # index-version = "inmem"
-  # wal-dir = "/var/lib/influxdb/wal"
-  # wal-fsync-delay = "0s"
-  # query-log-enabled = true
-  # cache-max-memory-size = 1073741824
-  # cache-snapshot-memory-size = 26214400
-  # cache-snapshot-write-cold-duration = "10m0s"
-  # compact-full-write-cold-duration = "4h0m0s"
-  # max-series-per-database = 1000000
-  # max-values-per-tag = 100000
-  # max-concurrent-compactions = 0
-  # max-index-log-file-size = 1048576
-  # trace-logging-enabled = false
-  # tsm-use-madv-willneed = false
+  dir = "/var/lib/influxdb/data"
+  index-version = "inmem"
+  wal-dir = "/var/lib/influxdb/wal"
+  wal-fsync-delay = "0s"
+  query-log-enabled = true
+  cache-max-memory-size = 1073741824
+  cache-snapshot-memory-size = 26214400
+  cache-snapshot-write-cold-duration = "10m0s"
+  compact-full-write-cold-duration = "4h0m0s"
+  max-series-per-database = 1000000
+  max-values-per-tag = 100000
+  max-concurrent-compactions = 0
+  max-index-log-file-size = 1048576
+  trace-logging-enabled = false
+  tsm-use-madv-willneed = false
 
 [coordinator]
   write-timeout = "10s"
@@ -55,29 +55,29 @@ reporting-disabled = false
   write-buffer-size = 1000
 
 [http]
-  enabled = true
-  bind-address = ":8086"
-  auth-enabled = true
-  log-enabled = true
-  suppress-write-log = false
-  write-tracing = false
-  pprof-enabled = true
-  debug-pprof-enabled = false
-  https-enabled = false
-  https-certificate = ""
-  https-private-key = ""
-  max-row-limit = 0
-  max-connection-limit = 0
-  shared-secret = ""
-  realm = "InfluxDB"
-  unix-socket-enabled = false
-  unix-socket-permissions = "0777"
-  bind-socket = "/var/run/influxdb.sock"
-  max-body-size = 25000000
-  access-log-path = ""
-  max-concurrent-write-limit = 0
-  max-enqueued-write-limit = 0
-  enqueued-write-timeout = 30000000000
+  # enabled = true
+  # bind-address = ":8086"
+  # auth-enabled = true
+  # log-enabled = true
+  # suppress-write-log = false
+  # write-tracing = false
+  # pprof-enabled = true
+  # debug-pprof-enabled = false
+  # https-enabled = false
+  # https-certificate = ""
+  # https-private-key = ""
+  # max-row-limit = 0
+  # max-connection-limit = 0
+  # shared-secret = ""
+  # realm = "InfluxDB"
+  # unix-socket-enabled = false
+  # unix-socket-permissions = "0777"
+  # bind-socket = "/var/run/influxdb.sock"
+  # max-body-size = 25000000
+  # access-log-path = ""
+  # max-concurrent-write-limit = 0
+  # max-enqueued-write-limit = 0
+  # enqueued-write-timeout = 30000000000
 
 [logging]
   format = "auto"
