--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -1,4 +1,4 @@
-FROM	alpine
+FROM	alpine:3.12.3
 
 RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories
 RUN apk upgrade --available && apk add openrc nginx supervisor telegraf
