--- a/srcs/grafana/Dockerfile
+++ b/srcs/grafana/Dockerfile
@@ -5,8 +5,7 @@ RUN apk update && apk add libc6-compat supervisor telegraf
 RUN wget https://dl.grafana.com/oss/release/grafana-7.3.1.linux-amd64.tar.gz
 RUN tar -zxvf grafana-7.3.1.linux-amd64.tar.gz
 RUN mv grafana-7.3.1 grafana
-RUN mkdir -p /etc/telegraf
-RUN mkdir -p /etc/grafana
+RUN mkdir -p /etc/telegraf && mkdir -p /etc/grafana
 
 ADD src/supervisord.conf /etc/
 ADD src/telegraf.conf /etc/telegraf/telegraf.conf
